feat(sdk,api): add session config patch
